--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalSqlServer": "Data Source = (LocalDB)\\MSSQLLocalDB; Database=UPGDB;"
+  }
 }
