Bitta pull qiledigan joyi lekin

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <Folder Include="Common\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
