--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
