--- a/DTOS/DTOS.csproj
+++ b/DTOS/DTOS.csproj
@@ -10,4 +10,12 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="HousingDTOs\" />
+    <Folder Include="KeyboardDTOs\" />
+    <Folder Include="LaptopDTOs\" />
+    <Folder Include="MiceDTOs\" />
+    <Folder Include="MonitorDTOs\" />
+  </ItemGroup>
+
 </Project>
