--- a/DTOS/DTOS.csproj
+++ b/DTOS/DTOS.csproj
@@ -18,4 +18,8 @@
     <Folder Include="MonitorDTOs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
