--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalPG": "Host=localhost;Port=5432;Database = UPGDb; Username=postgres; Password=1234;"
+    "PostgreSQL": "Host=localhost;Port=5432;Database = UPGDb; Username=postgres; Password=1234;"
   }
 }
