--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PostgreSQL": "Host=localhost;Port=5432;Database = UPGDb; Username=postgres; Password=1234;"
-  }
+  },
+  "AWS": {
+    "AccessKey": "AKIA6NFXESYHWEBS3E5A",
+    "SecretAccessKey": "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"
+  },
+  "TinifyApiKey": "MC0FfdBwwVcK9npTfxLCYs0r7ljNc8ky"
 }
