--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost;Port=5432;Database = UPGDb; Username=postgres; Password=1234;"
+    "PostgreSQL": "Host=localhost;Port=5432;Database = UPGчDb; Username=postgres; Password=1234;"
   },
   "AWS": {
     "AccessKey": "AKIA6NFXESYHWEBS3E5A",
