--- a/Infastructure/Infastructure.csproj
+++ b/Infastructure/Infastructure.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\UPG.Core\UPG.Core.csproj" />
   </ItemGroup>
 
 </Project>
