--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Infastructure\Infastructure.csproj" />
+    <ProjectReference Include="..\UPG.Core\UPG.Core.csproj" />
   </ItemGroup>
 
 </Project>
