--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -17,9 +17,14 @@
       "ConnectRetry": 3
     }
   },
-    "AWS": {
-      "AccessKey": "AKIA6NFXESYHWEBS3E5A",
-      "SecretAccessKey": "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"
-    },
-    "TinifyApiKey": "MC0FfdBwwVcK9npTfxLCYs0r7ljNc8ky"
-  }
+  "AWS": {
+    "AccessKey": "AKIA6NFXESYHWEBS3E5A",
+    "SecretAccessKey": "LIy9xUFWluwp89KIiKoEMPgmqoGovf11uTunE6Mt"
+  },
+  "Jwt": {
+    "Key": "This is your Secret Key which needs to be very very long",
+    "Issuer": "https://localhost:5020",
+    "Audience": "https://localhost:5020"
+  },
+  "TinifyApiKey": "MC0FfdBwwVcK9npTfxLCYs0r7ljNc8ky"
+}
