filterni service lari yozildi

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DTOS\DTOS.csproj" />
     <ProjectReference Include="..\Infastructure\Infastructure.csproj" />
+    <ProjectReference Include="..\UPG.Core\UPG.Core.csproj" />
   </ItemGroup>
 
 </Project>
