Auth dagi muammolar tugadi

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -23,8 +23,8 @@
   },
   "Jwt": {
     "Key": "This is your Secret Key which needs to be very very long",
-    "Issuer": "https://localhost:5020",
-    "Audience": "https://localhost:5020"
+    "Issuer": "https://upg.1kb.uz",
+    "Audience": "https://upg.1kb.uz"
   },
   "TinifyApiKey": "MC0FfdBwwVcK9npTfxLCYs0r7ljNc8ky"
 }
