--- a/MVCLayer/appsettings.json
+++ b/MVCLayer/appsettings.json
@@ -5,5 +5,26 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=localhost;Port=5432;Database = UPGDb; Username=postgres; Password=1234;",
+    "RedisConnectionString": "127.0.0.1:6379"
+  },
+  "RedisCacheOptions": {
+    "Configuration": "localhost:6379",
+    "ConfigurationOptions": {
+      "ConnectTimeout": 5000,
+      "ConnectRetry": 3
+    }
+  },
+  "AWS": {
+    "AccessKey": "AKIA6NFXESYHWEBS3E5A",
+    "SecretAccessKey": "LIy9xUFWluwp89KIiKoEMPgmqoGovf11uTunE6Mt"
+  },
+  "Jwt": {
+    "Key": "This is your Secret Key which needs to be very very long",
+    "Issuer": "https://localhost:5020",
+    "Audience": "https://localhost:5020"
+  },
+  "TinifyApiKey": "MC0FfdBwwVcK9npTfxLCYs0r7ljNc8ky"
 }
