--- a/UPG.Admin/UPG.Admin.csproj
+++ b/UPG.Admin/UPG.Admin.csproj
@@ -18,4 +18,8 @@
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\TablesForgamersDTOs\" />
+  </ItemGroup>
+
 </Project>
